Add view, template, and forms to create reservations

--- a/aerolinksma/templates/index.html
+++ b/aerolinksma/templates/index.html
@@ -2,4 +2,8 @@
 
 {% block content %}
     <h1>AerolinkSMA</h1>
+
+    <a href="{% url 'shuttle:create_reservation' %}">
+        Make reservation
+    </a>
 {% endblock %}
