--- a/aerolinksma/templates/base.html
+++ b/aerolinksma/templates/base.html
@@ -1,10 +1,11 @@
-<!doctype html>
+{% load static %}<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <title>AerolinkSMA</title>
+        <script src="{% static 'js/bundle.js' %}"></script>
     </head>
     <body>
         {% block content %}{% endblock %}
