--- a/aerolinksma/assets/scss/main.scss
+++ b/aerolinksma/assets/scss/main.scss
@@ -1,1 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
+
+.list-detail {
+    h5 {
+        text-align: center;
+    }
+
+    p {
+        text-align: center;
+        margin-bottom: 0;
+    }
+}
