Add paid badges to reservation items in admin template

--- a/aerolinksma/templates/shuttle/admin.html
+++ b/aerolinksma/templates/shuttle/admin.html
@@ -16,6 +16,15 @@
                                     </span>
                                     {{ reservation.place }}
                                     {{ reservation.get_direction_display }}
+                                    {% if reservation.paid %}
+                                        <span class="badge badge-success">
+                                            Paid
+                                        </span>
+                                    {% else %}
+                                        <span class="badge badge-light">
+                                            Not paid
+                                        </span>
+                                    {% endif %}
                                 </h6>
                                 <small title="{{ reservation.created_at }}"
                                        class="d-none d-md-block">
