--- a/aerolinksma/templates/shuttle/index.html
+++ b/aerolinksma/templates/shuttle/index.html
@@ -5,7 +5,7 @@
     <div class="container my-4">
         <div class="row justify-content-center">
             <div class="col-md-7">
-                <h1>Make your reservation</h1>
+                <h1 class="mb-3">Make your reservation</h1>
 
                 <form action="" method="POST">
                     {% csrf_token %}
