--- a/aerolinksma/assets/scss/_variables.scss
+++ b/aerolinksma/assets/scss/_variables.scss
@@ -5,10 +5,15 @@ $enable-gradients: true;
 
 $primary: #6994f9;
 $red: #ec7e71;
+$dark-text-color: darken($primary, 55%);
+
+$body-bg: #f8f9fa;
+$body-color: $dark-text-color;
 
 $headings-font-weight: 900;
 
+$navbar-height: 56px;
 $navbar-light-active-color: #1f2d3d;
 
 $input-focus-border-color: $primary;
-$input-btn-focus-width: 0.1rem;
+$input-btn-focus-width: 2px;
