Remove theme colours from scss setup

--- a/aerolinksma/assets/scss/main.scss
+++ b/aerolinksma/assets/scss/main.scss
@@ -4,6 +4,9 @@
 
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
+
+$theme-colors: map-remove($theme-colors, "secondary", "warning", "info", "dark");
+
 @import "~bootstrap/scss/root";
 @import "~bootstrap/scss/reboot";
 @import "~bootstrap/scss/type";
