--- a/aerolinksma/templates/index.html
+++ b/aerolinksma/templates/index.html
@@ -27,4 +27,17 @@
             </div>
         </div>
     </div>
+
+    <section class="sub-hero">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3>
+                        <span class="brand">Aerolink</span>
+                        gets you to SMA in the blink of an eye
+                    </h3>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
