Customise brand name in footer

--- a/aerolinksma/templates/partials/footer.html
+++ b/aerolinksma/templates/partials/footer.html
@@ -2,8 +2,11 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p class="brand">
-                    &copy; 2020 AerolinkSMA
+                <p>
+                    &copy; 2020
+                    <span class="brand">
+                        AerolinkSMA
+                    </span>
                 </p>
             </div>
 
