Add USD heading in pricing table

--- a/aerolinksma/templates/shuttle/index.html
+++ b/aerolinksma/templates/shuttle/index.html
@@ -59,6 +59,12 @@
                         <h3 class="card-title">Pricing table</h3>
 
                         <table class="pricing table table-sm table-borderless table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <th scope="row" class="text-right">USD</th>
+                                </tr>
+                            </thead>
                             <tbody>
                                 {% for place in places %}
                                     <tr>
