--- a/aerolinksma/templates/partials/navbar.html
+++ b/aerolinksma/templates/partials/navbar.html
@@ -27,6 +27,14 @@
                 </a>
             </li>
 
+            {% if user.is_authenticated and user.is_staff %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'shuttle:admin' %}">
+                        Admin
+                    </a>
+                </li>
+            {% endif %}
+
             <li class="nav-item d-flex align-items-center">
                 <a class="btn btn-sm btn-primary ml-2 d-none d-md-block"
                    href="{% url 'shuttle:create_reservation' %}">
