--- a/aerolinksma/templates/shuttle/admin.html
+++ b/aerolinksma/templates/shuttle/admin.html
@@ -4,28 +4,27 @@
     <div class="container my-3">
         <div class="row">
             <div class="col-md-8">
-                <h1>Reservations</h1>
+                <h3>Newest reservations</h3>
                 <ul class="list-group">
                     {% for reservation in object_list %}
-                        <a class="list-group-item list-group-item-action"
+                        <a class="list-group-item list-group-item-action position-relative"
                            href="{{ reservation.get_absolute_url }}">
                             <div class="d-flex w-100 justify-content-between align-items-center mb-1">
-                                <h6 class="mb-1">
-                                    <span class="badge badge-light badge-pill">
-                                        {{ reservation.pk }}
-                                    </span>
+                                <h6 class="mb-0">
                                     {{ reservation.place }}
-                                    {{ reservation.get_direction_display }}
+                                    {{ reservation.get_direction_display }},
+                                    {{ reservation.get_id }}
                                     {% if reservation.paid %}
                                         <span class="badge badge-success">
                                             Paid
                                         </span>
                                     {% else %}
-                                        <span class="badge badge-light">
+                                        <span class="badge">
                                             Not paid
                                         </span>
                                     {% endif %}
                                 </h6>
+
                                 <small title="{{ reservation.created_at }}"
                                        class="d-none d-md-block">
                                     {{ reservation.created_at|timesince }}
@@ -35,21 +34,48 @@
 
                             <small class="d-block d-md-none mt-n1 mb-1"
                                    title="{{ reservation.created_at }}">
+                                Created
                                 {{ reservation.created_at|timesince }}
                                 ago
                             </small>
 
-                            <p class="mb-0">
-                                Pickup date:
-                                <span class="badge badge-primary badge-pill">
-                                    {{ reservation.pickup_date }}
-                                </span>
-                            </p>
+                            <small class="d-block"
+                                   title="{{ reservation.pickup_date|date:'r' }}">
+                                Pickup:
+                                {{ reservation.pickup_date|date:'D, d M h:i a' }}
+                            </small>
                         </a>
                     {% endfor %}
                 </ul>
 
                 {% include "partials/pagination.html" %}
+            </div>
+
+            <div class="col-md-4 my-3 my-md-0">
+                <h3>Next reservations</h3>
+
+                <ul class="list-group">
+                    {% for reservation in next_reservations %}
+                        <a class="list-group-item list-group-item-action"
+                           href="{{ reservation.get_absolute_url }}">
+                            <h6 class="mb-0">
+                                {{ reservation.place.name }}
+                                {{ reservation.get_direction_display }},
+                                {{ reservation.get_id }}
+                                {% if not reservation.paid %}
+                                    <span class="badge">
+                                        Not paid
+                                    </span>
+                                {% endif %}
+                            </h6>
+
+                            <small title="{{ reservation.pickup_date|date:'r' }}">
+                                In
+                                {{ reservation.pickup_date|timeuntil }}
+                            </small>
+                        </a>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
     </div>
