Add svg logo to navbar and footer

--- a/aerolinksma/templates/partials/footer.html
+++ b/aerolinksma/templates/partials/footer.html
@@ -1,7 +1,12 @@
+{% load static %}
 <footer>
     <div class="container">
         <div class="row">
             <div class="col">
+                <div>
+                    <img alt="Logo" src="{% static 'logo.svg' %}"
+                         width="36" height="36" />
+                </div>
                 <p>
                     &copy; 2020
                     <span class="brand">
