Use separate files for CSS and JS in webpack

--- a/aerolinksma/templates/base.html
+++ b/aerolinksma/templates/base.html
@@ -5,7 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <title>AerolinkSMA</title>
-        <script src="{% static 'js/bundle.js' %}"></script>
+        {% block styles %}
+            <link href="{% static 'dist/css/styles.css' %}" rel="stylesheet" />
+        {% endblock %}
     </head>
     <body>
         {% include "partials/navbar.html" %}
@@ -15,5 +17,8 @@
         </div>
 
         {% include "partials/footer.html" %}
+        {% block scripts %}
+            <script src="{% static 'dist/js/bundle.js' %}"></script>
+        {% endblock %}
     </body>
 </html>
