--- a/aerolinksma/templates/shuttle/index.html
+++ b/aerolinksma/templates/shuttle/index.html
@@ -2,37 +2,37 @@
 
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="container my-3 my-md-5">
-        <div class="row mb-3">
-            <div class="col">
-                <div class="card p-4">
-                    <div class="card-body">
-                        <h1>Plan Your Trip</h1>
+    <section class="shuttle jumbotron jumbotron-fluid bg-white mb-0">
+        <div class="container mb-3">
+            <div class="row">
+                <div class="col">
+                    <h1>Plan Your Trip</h1>
 
-                        <p class="lead">
-                            Traveling within a group? On your own? We
-                            offer safe and reliable airport and
-                            city-to-city transfers, as well as rides
-                            to touristic points of interest. We’ve got
-                            options to fit your budget and travel
-                            plans.
-                        </p>
+                    <p class="lead">
+                        Traveling within a group? On your own? We
+                        offer safe and reliable airport and
+                        city-to-city transfers, as well as rides
+                        to touristic points of interest. We’ve got
+                        options to fit your budget and travel
+                        plans.
+                    </p>
 
-                        <p class="lead">
-                            Having no airport of its own, we
-                            understand that finding a way to get to
-                            San Miguel de Allende from one of the
-                            city's neighboring airports can be
-                            hectic. With AerolinkSMA's non-stop
-                            service, you’ll have the comfort and peace
-                            of mind of a guaranteed, safe and reliable
-                            ride.
-                        </p>
-                    </div>
+                    <p class="lead">
+                        Having no airport of its own, we
+                        understand that finding a way to get to
+                        San Miguel de Allende from one of the
+                        city's neighboring airports can be
+                        hectic. With AerolinkSMA's non-stop
+                        service, you’ll have the comfort and peace
+                        of mind of a guaranteed, safe and reliable
+                        ride.
+                    </p>
                 </div>
             </div>
         </div>
+    </section>
 
+    <div class="container mb-3 mb-md-5 mt-n5">
         <div class="row">
             <div class="col-md-7">
                 <div class="card reservation-form shadow-sm">
