Use code-splitting in webpack setup
The shuttle page (with the reservation form) requires
jquery-datetimepicker, which is not needed in other parts of the
website, so it makes sense to have a separate JS file and load it only
in that page.

--- a/aerolinksma/templates/base.html
+++ b/aerolinksma/templates/base.html
@@ -18,7 +18,7 @@
 
         {% include "partials/footer.html" %}
         {% block scripts %}
-            <script src="{% static 'dist/js/bundle.js' %}"></script>
+            <script src="{% static 'dist/js/main.bundle.js' %}"></script>
         {% endblock %}
     </body>
 </html>
