Add features section in landing page

--- a/aerolinksma/templates/index.html
+++ b/aerolinksma/templates/index.html
@@ -40,4 +40,63 @@
             </div>
         </div>
     </section>
+
+    <section id="features">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="feature">
+                        <h4 class="mb-2">
+                            Swift and Steady
+                        </h4>
+                        <p class="mb-0">
+                            Punctuality is our commitment. We
+                            understand the importance of reliability
+                            and strive to be the best in completing
+                            our service in a timely manner.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <h4 class="mb-2">
+                            Certified Drivers
+                        </h4>
+                        <p class="mb-0">
+                            Our drivers are certified transportation
+                            providers with a deep knowledge of the
+                            region and conduct their service with
+                            utmost professionalism.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <h4 class="mb-2">
+                            Safety First
+                        </h4>
+                        <p class="mb-0">
+                            Ensuring that you arrive safely to your
+                            destination is our ultimate priority and
+                            embedded as our purpose in every step of
+                            our process.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="feature">
+                        <h4 class="mb-2">
+                            Hassle-Free Booking
+                        </h4>
+                        <p class="mb-0">
+                            Book your ride in the blink of an eye. No
+                            waiting in line at a call center or for a
+                            customer representative to respond over
+                            email.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
