--- a/aerolinksma/assets/scss/_landing.scss
+++ b/aerolinksma/assets/scss/_landing.scss
@@ -35,3 +35,11 @@
         }
     }
 }
+
+#features {
+    .feature {
+        text-align: center;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+}
