--- a/aerolinksma/templates/shuttle/index.html
+++ b/aerolinksma/templates/shuttle/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block head_title %}Make reservation{% endblock %}
+
 {% load crispy_forms_tags static %}
 {% block content %}
     <section class="shuttle jumbotron jumbotron-fluid bg-white mb-0">
