--- a/aerolinksma/templates/shuttle/reservation_detail.html
+++ b/aerolinksma/templates/shuttle/reservation_detail.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block head_title %}Reservation {{ object.get_id }}{% endblock %}
+
 {% block content %}
     <div class="container my-4">
         <div class="row">
