--- a/aerolinksma/templates/partials/footer.html
+++ b/aerolinksma/templates/partials/footer.html
@@ -8,7 +8,7 @@
                          width="36" height="36" />
                 </div>
                 <p>
-                    &copy; 2020
+                    &copy; {% now 'Y' %}
                     <span class="brand">
                         AerolinkSMA
                     </span>
