Change make reservation button text in landing page

--- a/aerolinksma/templates/index.html
+++ b/aerolinksma/templates/index.html
@@ -17,7 +17,7 @@
                     </p>
 
                     <a class="btn btn-lg btn-primary" href="{% url 'shuttle:create_reservation' %}">
-                        Make reservation
+                        Book Now
                     </a>
 
                     <p class="text-muted mt-1">
