Hide some elements (like footer) in print media query

--- a/aerolinksma/templates/partials/footer.html
+++ b/aerolinksma/templates/partials/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer>
+<footer class="d-print-none">
     <div class="container">
         <div class="row">
             <div class="col">
