--- a/aerolinksma/templates/shuttle/reservation_detail.html
+++ b/aerolinksma/templates/shuttle/reservation_detail.html
@@ -87,12 +87,12 @@
                 </div>
 
                 {% if not object.paid %}
-                    <a class="btn btn-primary" href="#">
+                    <a class="btn btn-primary d-print-none" href="#">
                         Mark as paid in cash
                     </a>
                 {% endif %}
 
-                <a class="btn btn-danger float-right" href="#">
+                <a class="btn btn-danger float-right d-print-none" href="#">
                     Delete reservation
                 </a>
             </div>
