--- a/aerolinksma/assets/scss/_nav.scss
+++ b/aerolinksma/assets/scss/_nav.scss
@@ -11,6 +11,8 @@ body {
     color: theme-color("primary");
     font-weight: 900;
     letter-spacing: -0.01em;
+    display: flex;
+    align-items: center;
 
     &:hover,
     &:focus {
