Center detail items in reservation detail page

--- a/aerolinksma/assets/scss/_admin.scss
+++ b/aerolinksma/assets/scss/_admin.scss
@@ -10,6 +10,10 @@
 
     .list-detail-item {
         flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
         h5 {
             text-align: center;
