--- a/aerolinksma/templates/shuttle/reservation_detail.html
+++ b/aerolinksma/templates/shuttle/reservation_detail.html
@@ -87,9 +87,13 @@
                 </div>
 
                 {% if not object.paid %}
-                    <a class="btn btn-primary d-print-none" href="#">
-                        Mark as paid in cash
-                    </a>
+                    <form action="{% url 'shuttle:reservation-mark-as-paid' object.pk %}"
+                          class="d-inline" method="POST">
+                        {% csrf_token %}
+                        <button class="btn btn-primary d-print-none">
+                            Mark as paid in cash
+                        </button>
+                    </form>
                 {% endif %}
 
                 <a class="btn btn-danger float-right d-print-none"
