--- a/aerolinksma/templates/shuttle/index.html
+++ b/aerolinksma/templates/shuttle/index.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="col d-none d-md-block">
-                <div class="card">
+                <div class="card mb-3">
                     <div class="card-body">
                         <h3 class="card-title">Pricing table</h3>
 
@@ -82,6 +82,32 @@
                         </a>
                     </div>
                 </div>
+
+                <div id="total-cost" class="card d-none">
+                    <div class="card-body d-flex justify-content-between">
+                        <h4 class="card-title">Total cost</h4>
+
+                        <div id="prices">
+                            <div class="d-flex align-items-center justify-content-end">
+                                <h5 class="mb-0">
+                                    <span class="badge badge-primary">Cash</span>
+                                    USD <span id="cost-cash">230</span>
+                                </h5>
+                            </div>
+
+                            <hr class="mt-2 mb-1" />
+
+                            <div class="d-flex align-items-center justify-content-end">
+                                <h6>
+                                    <span class="badge badge-light">
+                                        or with PayPal
+                                    </span>
+                                    USD <span id="cost-paypal">280</span>
+                                </h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -89,5 +115,6 @@
 
 {% block scripts %}
     {{ block.super }}
+    {{ places_prices|json_script:"places-prices" }}
     <script src="{% static 'dist/js/reservation_form.bundle.js' %}"></script>
 {% endblock %}
