--- a/aerolinksma/templates/shuttle/index.html
+++ b/aerolinksma/templates/shuttle/index.html
@@ -47,6 +47,32 @@
                             {% csrf_token %}
                             {% crispy reservation_form %}
                             {% crispy client_form %}
+
+                            <div id="total-cost-sm" class="d-none">
+                                <div class="d-flex d-md-none justify-content-between align-items-baseline">
+                                    <h4>Total cost</h4>
+                                    <div class="prices">
+                                        <div class="d-flex justify-content-end">
+                                            <h5 class="mb-1">
+                                                <span class="badge badge-primary">
+                                                    Cash
+                                                </span>
+                                                USD <span class="cost-cash"></span>
+                                            </h5>
+                                        </div>
+                                        <hr class="my-1"/>
+                                        <div class="d-flex justify-content-end">
+                                            <h6>
+                                                <span class="badge badge-light">
+                                                    or with PayPal
+                                                </span>
+                                                USD <span class="cost-paypal"></span>
+                                            </h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <button class="btn btn-primary">
                                 Book now
                             </button>
@@ -87,11 +113,11 @@
                     <div class="card-body d-flex justify-content-between">
                         <h4 class="card-title">Total cost</h4>
 
-                        <div id="prices">
+                        <div class="prices">
                             <div class="d-flex align-items-center justify-content-end">
                                 <h5 class="mb-0">
                                     <span class="badge badge-primary">Cash</span>
-                                    USD <span id="cost-cash">230</span>
+                                    USD <span class="cost-cash"></span>
                                 </h5>
                             </div>
 
@@ -102,7 +128,7 @@
                                     <span class="badge badge-light">
                                         or with PayPal
                                     </span>
-                                    USD <span id="cost-paypal">280</span>
+                                    USD <span class="cost-paypal"></span>
                                 </h6>
                             </div>
                         </div>
