--- a/aerolinksma/templates/shuttle/reservation_detail.html
+++ b/aerolinksma/templates/shuttle/reservation_detail.html
@@ -7,6 +7,7 @@
         <div class="row">
             <div class="col-md-8">
                 <h1>
+                    {{ object.get_id }}
                     {{ object.place }}
                     {{ object.get_direction_display }}
                 </h1>
