--- a/aerolinksma/assets/scss/_nav.scss
+++ b/aerolinksma/assets/scss/_nav.scss
@@ -5,6 +5,11 @@ body {
 .main.navbar {
     border-bottom: 1px solid $gray-400;
     box-shadow: 0 0 3px 1px rgba($gray-500, 0.25);
+
+    a.nav-link {
+        font-size: 0.875rem;
+        font-weight: 600;
+    }
 }
 
 .navbar-light .navbar-brand {
@@ -20,7 +25,38 @@ body {
     }
 }
 
-a.nav-link {
-    font-size: 0.875rem;
-    font-weight: 600;
+#admin-nav {
+    a.nav-link {
+        font-weight: 600;
+    }
+
+    @include media-breakpoint-up(md) {
+        background: $white;
+        border: 1px solid $gray-300;
+        border-radius: $border-radius;
+        display: block;
+
+        a.nav-link {
+            color: $gray-600;
+            background: none;
+            text-align: left;
+            padding-top: 0.75rem;
+            padding-bottom: 0.75rem;
+            border-radius: 0;
+
+            &:hover {
+                background-color: $gray-100;
+            }
+
+            &.active {
+                color: $primary;
+                background: none;
+                border-right: 2px solid $primary;
+
+                &:hover {
+                    background-color: $gray-100;
+                }
+            }
+        }
+    }
 }
