--- a/aerolinksma/templates/shuttle/admin_reservations.html
+++ b/aerolinksma/templates/shuttle/admin_reservations.html
@@ -1,11 +1,29 @@
 {% extends "base.html" %}
 
-{% block head_title %}Admin panel{% endblock %}
+{% block head_title %}Reservations{% endblock %}
 
 {% block content %}
     <div class="container my-3">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-2 mb-3">
+                <ul id="admin-nav" class="nav nav-pills nav-justified nav-fill">
+                    <li class="nav-item">
+                        <a class="nav-link active"
+                           href="{% url 'shuttle:admin' %}">
+                            Reservations
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="{% url 'shuttle:admin-places' %}">
+                            Places
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-md-6">
                 <h3>Newest reservations</h3>
                 <ul class="list-group">
                     {% for reservation in object_list %}
