--- a/aerolinksma/templates/shuttle/admin_places.html
+++ b/aerolinksma/templates/shuttle/admin_places.html
@@ -27,14 +27,15 @@
                 <div class="d-flex justify-content-between mb-3">
                     <h3 class="mb-0">Places</h3>
 
-                    <a class="btn btn-primary" href="#">
+                    <a class="btn btn-primary"
+                       href="{% url 'shuttle:place-add' %}">
                         Add new place
                     </a>
                 </div>
                 <ul class="list-group">
                     {% for place in object_list %}
                         <a class="list-group-item list-group-item-action"
-                           href="#">
+                           href="{% url 'shuttle:place-edit' place.pk %}">
                             <div class="d-flex w-100 justify-content-between align-items-center">
                                 <h6 class="mb-0">
                                     {{ place.name }}
