Change text colour of pickup date in reservations list items
Show a lighter text colour for reservations that have already passed.

--- a/aerolinksma/templates/shuttle/admin_reservations.html
+++ b/aerolinksma/templates/shuttle/admin_reservations.html
@@ -59,7 +59,7 @@
                                 ago
                             </small>
 
-                            <small class="d-block"
+                            <small class="pickup-date d-block{% if reservation.has_passed %} text-muted{% endif %}"
                                    title="{{ reservation.pickup_date|date:'r' }}">
                                 Pickup:
                                 {{ reservation.pickup_date|date:'D, d M h:i a' }}
