--- a/aerolinksma/templates/shuttle/admin_places.html
+++ b/aerolinksma/templates/shuttle/admin_places.html
@@ -6,21 +6,7 @@
     <div class="container my-3">
         <div class="row">
             <div class="col-md-2 mb-2">
-                <ul id="admin-nav" class="nav nav-pills nav-fill">
-                    <li class="nav-item">
-                        <a class="nav-link"
-                           href="{% url 'shuttle:admin' %}">
-                            Reservations
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link active"
-                           href="{% url 'shuttle:admin-places' %}">
-                            Places
-                        </a>
-                    </li>
-                </ul>
+                {% include "shuttle/partials/sidebar_nav.html" %}
             </div>
 
             <div class="col-md-6">
